provisioning/buffer/kubernetes/templates/worker/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: buffer-worker
  namespace: $NAMESPACE
  labels:
    app: buffer-worker
    releaseId: $RELEASE_ID
spec:
  replicas: $BUFFER_WORKER_REPLICAS
  selector:
    matchLabels:
      app: buffer-worker
  template:
    metadata:
      labels:
        app: buffer-worker
        releaseId: $RELEASE_ID
        buffer-etcd-client: "true"
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "buffer-worker"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "https://github.com/keboola/keboola-as-code"}'
        ad.datadoghq.com/buffer-worker.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9000/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
    spec:
#      terminationGracePeriodSeconds: 600
      containers:
        - name: buffer-worker
          image: $BUFFER_WORKER_REPOSITORY:$BUFFER_WORKER_IMAGE_TAG
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 9000 # metrics
      tolerations:
        - key: app
          operator: Exists
          effect: NoSchedule
      nodeSelector:
        nodepool: main
